# keeweb

./: .all-contributorsrc  .babelrc  .browserslistrc  .dockerignore  .editorconfig  .eslintignore  .eslintrc  .example.env  .gitattributes  .gitignore  .jshintrc  .npmrc  .prettierignore  .prettierrc  .travis.yml  404.html  CNAME  CONTRIBUTING.md  Dockerfile  Dockerfile.aarch64  Gruntfile.js  INJECTION ash  LICENSE  LICENSE.txt  LICENSES-DEPS.txt  MIT-LICENSE.txt  PACKAGES.md  PyNaCl-1.5.0-cp36-abi3-musllinux_1_1_aarch64.whl  PyNaCl-1.5.0-cp36-abi3-musllinux_1_1_x86_64.whl  PyYAML-6.0.1-cp312-cp312-linux_aarch64.whl  PyYAML-6.0.1-cp312-cp312-musllinux_1_1_x86_64.whl  PyYAML-6.0.2-cp312-cp312-musllinux_1_1_aarch64.whl  PyYAML-6.0.2-cp312-cp312-musllinux_1_1_x86_64.whl  README.md  SECURITY.md  TODO.md  babel.config.js  bluepy-1.3.0-cp312-cp312-linux_aarch64.whl  bluepy-1.3.0-cp312-cp312-linux_x86_64.whl  bower.json  (+42 more)
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  no-response.yml  stale.yml
app/: 404.html  cordova.html  index.hbs  index.html  manifest.appcache  manifest.json  service-worker.js  update.json
chrome/: app-extension.js  background.js  login-extension.js  manifest.json  popup.css  popup.html  popup.js
desktop/: app.js  main.js  package.json  (+2 more)
extension/native-messaging-host/: .clang-format  CMakeLists.txt  Makefile
extension/native-messaging-host/src/: main.cpp  native-messaging-host.cpp
extension/native-messaging-host/test/: native-host-test.js  native-host-test.mjs  native-messaging-host-test.mjs
(+1006 files in other folders)
